<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cpListViewModel"
            type="com.hsecourseproject.cpchoose.cplist.CPListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/list_switcher_button_toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginTop="@dimen/cp_list_toggle_button_group_margin_top">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cpFullList"
                android:layout_width="@dimen/cp_list_toggle_button_group_width"
                android:layout_height="@dimen/login_toggle_button_group_height"
                android:onClick="@{cpListViewModel.onFullListClicked}"
                android:text="@string/cp_full_list_button"
                android:textColor="@color/black"
                android:textSize="@dimen/toggle_button_text_size"
                app:backgroundTint="@color/main_blue"
                app:cornerRadius="@dimen/button_corner_radius"
                app:strokeColor="@color/main_blue"
                app:strokeWidth="@dimen/material_button_stroke_width" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createdByUser"
                android:layout_width="@dimen/cp_list_toggle_button_group_width"
                android:layout_height="@dimen/login_toggle_button_group_height"
                android:onClick="@{cpListViewModel.onCreatedListClicked}"
                android:text="@string/cp_created_button"
                android:textColor="@color/black"
                android:textSize="@dimen/toggle_button_text_size"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/button_corner_radius"
                app:strokeColor="@color/main_blue"
                app:strokeWidth="@dimen/material_button_stroke_width" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/proposedByUser"
                android:layout_width="@dimen/cp_list_toggle_button_group_width"
                android:layout_height="@dimen/login_toggle_button_group_height"
                android:onClick="@{cpListViewModel.onProposedListClicked}"
                android:text="@string/cp_proposed_button"
                android:textColor="@color/black"
                android:textSize="@dimen/toggle_button_text_size"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/button_corner_radius"
                app:strokeColor="@color/main_blue"
                app:strokeWidth="@dimen/material_button_stroke_width" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cpListRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_switcher_button_toggle_group"
            tools:listitem="@layout/cp_card" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/student_bottom_navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>